fixes whitespace issue

--- a/Azure Data Box _ Microsoft Azure_files/core.css
+++ b/Azure Data Box _ Microsoft Azure_files/core.css
@@ -18801,7 +18801,7 @@ a.hashtag {
 }
 
 .partner{
-  padding-bottom: 48px;
+  padding-bottom: 75px;
   text-align: center;
 }
 
@@ -18864,4 +18864,5 @@ a.hashtag {
 
 .foot{
   text-align: center;
+  margin-bottom: 340px;
 }
